--- a/index.html
+++ b/index.html
@@ -4,23 +4,141 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vydelka</title>
+    <link rel="icon" href="img/baby-yoda.jpeg">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
         <nav>
             <p class="header-logo">Vydelka</p>
-            <ul>
+            <ul class="header-menu">
                 <li><a href="#">home</a></li>
-                <li><a href="#">products</a></li>
-                <li><a href="#">contacts</a></li>
+                <li><a href="#products">products</a></li>
+                <li><a href="#contacts">contacts</a></li>
                 <li><a href="#">cart</a></li>
             </ul>
         </nav>
-        <div class="banner">
+        <div class="header-banner">
             <h1>Vydelka</h1>
-            <button>Shop now</button>
+            <button class="button">Shop now</button>
         </div>
     </header>
+    <main>
+        <h2 id="products">Products</h2>
+        <div class="product-list">
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+            <article class="product-card">
+                <h3>Cybertruck</h3>
+                <img src="img/cybertruck.jpeg" alt="Cybertruck">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto numquam dolorem modi velit inventore nihil maxime? Incidunt atque ducimus alias nam excepturi porro officia minus cupiditate nesciunt, non similique aliquid?</p>
+                <div class="product-buttons">
+                    <button class="button card-button">Info</button>
+                    <button class="button card-button">Buy</button>
+                </div>
+            </article>
+        </div>
+    </main>
+    <footer>
+        <h2 id="contacts">Contacts</h2>
+        <p>....</p>
+    </footer>
 </body>
 </html>
